2003-06-02  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/ddk/ntpoapi.h (POWER_INFORMATION_LEVEL): Remove.
	* include/winnt.h (POWER_INFORMATION_LEVEL): Add.
	* include/ddk/winddk.h (SINGLE_LIST_ENTRY,SLIST_HEADER):
	Remove.
	* include/ddk/ndis.h (NdisAllocateSpinLock): Add missing '\'.

2003-05-30  Mattia Barbon  <mbarbon@dsi.unive.it>

	* lib/oleacc.def: New file.
	* include/winable.h: New file.
	* include/oleacc.h: Add extern "C" guard.
	(NAVDIR_*, ROLE_*, STATE_*): Add missing constants.
	(AccessibleChildren, AccessibleObjectFromEvent,
	AccessibleObjectFromPoint, AccessibleObjectFromWindow,
	CreateStdAccessibleProxy[AW], GetOleaccVersionInfo, GetRoleText[AW],
	GetStateText[AW], LresultFromObject, ObjectFromLresult,
	WindowFromAccessibleObject): Add prototypes and UNICODE mappings.
	* include/winuser.h (NotifyWinEvent): Add prototype.
	(OBJID_WINDOW, OBJID_SYSMENU, OBJID_TITLEBAR,
	OBJID_MENU, OBJID_CLIENT, OBJID_VSCROLL, OBJID_HSCROLL,
	OBJID_SIZEGRIP, OBJID_CARET, OBJID_CURSOR, OBJID_ALERT,
	OBJID_SOUND): Move from here to...
	* include/winable.h (OBJID_WINDOW, OBJID_SYSMENU, OBJID_TITLEBAR,
	OBJID_MENU, OBJID_CLIENT, OBJID_VSCROLL, OBJID_HSCROLL,
	OBJID_SIZEGRIP, OBJID_CARET, OBJID_CURSOR, OBJID_ALERT,
	OBJID_SOUND): Here, as per documentation.
	* lib/test.c: Include winable.h.
	* lib/user32.def (NotifyWinEvent): Add missing export.

2003-05-30  Bang Jun-Young  <junyoung@netbsd.org>

	* include/winbase.h (HeapCompact): Correct prototype.
	* include/winnt.h (SINGLE_LIST_ENTRY, SLIST_ENTRY,
	SLIST_HEADER): Add.

2003-05-27  Andrew C. Stadt <acstadt@sympatico.ca>

	* include/winuser.h (LWA_COLORKEY, LWA_ALPHA): Add defines.

2003-05-25  Bill C. Riemers  <cygwin@docbill.net>

	* include/winuser.h (EnumDisplayDevicesW): Fix typo.

2003-05-23  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winuser.h (EnumDisplayDevices[AW]): Add prototypes.
	* include/wingdi.h (DISPLAY_DEVICE): UNICODE it.
