@@ -34,6 +34,7 @@ extern "C" {
 #define UF_INTERDOMAIN_TRUST_ACCOUNT 2048
 #define UF_WORKSTATION_TRUST_ACCOUNT 4096
 #define UF_SERVER_TRUST_ACCOUNT 8192
+#define UF_MNS_LOGON_ACCOUNT 131072
 #define UF_MACHINE_ACCOUNT_MASK (UF_INTERDOMAIN_TRUST_ACCOUNT|UF_WORKSTATION_TRUST_ACCOUNT|UF_SERVER_TRUST_ACCOUNT)
 #define UF_ACCOUNT_TYPE_MASK (UF_TEMP_DUPLICATE_ACCOUNT|UF_NORMAL_ACCOUNT|UF_INTERDOMAIN_TRUST_ACCOUNT|UF_WORKSTATION_TRUST_ACCOUNT|UF_SERVER_TRUST_ACCOUNT)
 #define UF_DONT_EXPIRE_PASSWD 65536
